// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons components Renders Plus and minus button properly 1`] = `
<button
  class="sc-gsDKAQ kvFkNF"
>
  +
</button>
`;

exports[`Buttons components Renders Submit button properly 1`] = `
<button
  class="sc-bdvvtL dcdrDj"
>
  Enviar
</button>
`;
